oxout.output
Terminals unused in grammar

   TPROC


State 23 conflicts: 3 shift/reduce


Grammar

    0 $accept: yyyAugNonterm $end

    1 $@1: %empty

    2 yyyAugNonterm: $@1 Program

    3 Program: FuncList

    4 FuncList: Funcdef
    5         | FuncList Funcdef

    6 Funcdef: id '(' ArgList ')' StmtList TEND ';'

    7 ArgList: %empty
    8        | id
    9        | ArgList ',' id

   10 StmtList: Stmt ';'
   11         | StmtList Stmt ';'

   12 Stmt: TVAR id assignment Expression
   13     | id assignment Expression
   14     | TIF Expression TTHEN StmtList TEND
   15     | TIF Expression TTHEN StmtList TELSE StmtList TEND
   16     | id ':' TLOOP StmtList TEND
   17     | TBREAK id
   18     | TCONT id
   19     | '*' Term assignment Expression
   20     | Expression
   21     | TRETURN Expression

   22 BinaryOperator: '+'
   23               | '-'
   24               | lessThan
   25               | '#'
   26               | TAND

   27 Expression: Prefix Term
   28           | Term
   29           | Expression BinaryOperator Term

   30 Prefix: TNOT
   31       | '*'
   32       | '-'

   33 CallArgs: %empty
   34         | Expression
   35         | CallArgs ',' Expression

   36 Call: id '(' CallArgs ')'

   37 Term: Factor
   38     | Call
   39     | Term '*' Factor

   40 Factor: number
   41       | '(' Expression ')'
   42       | id


Terminals, with rules where they appear

$end (0) 0
'#' (35) 25
'(' (40) 6 36 41
')' (41) 6 36 41
'*' (42) 19 31 39
'+' (43) 22
',' (44) 9 35
'-' (45) 23 32
':' (58) 16
';' (59) 6 10 11
error (256)
TIF (258) 14 15
TTHEN (259) 14 15
TELSE (260) 15
TEND (261) 6 14 15 16
TRETURN (262) 21
TLOOP (263) 16
TBREAK (264) 17
TCONT (265) 18
TVAR (266) 12
TNOT (267) 30
TAND (268) 26
TPROC (269)
id (270) 6 8 9 12 13 16 17 18 36 42
number (271) 40
lessThan (272) 24
assignment (273) 12 13 19


Nonterminals, with rules where they appear

$accept (28)
    on left: 0
yyyAugNonterm (29)
    on left: 2, on right: 0
$@1 (30)
    on left: 1, on right: 2
Program (31)
    on left: 3, on right: 2
FuncList (32)
    on left: 4 5, on right: 3 5
Funcdef (33)
    on left: 6, on right: 4 5
ArgList (34)
    on left: 7 8 9, on right: 6 9
StmtList (35)
    on left: 10 11, on right: 6 11 14 15 16
Stmt (36)
    on left: 12 13 14 15 16 17 18 19 20 21, on right: 10 11
BinaryOperator (37)
    on left: 22 23 24 25 26, on right: 29
Expression (38)
    on left: 27 28 29, on right: 12 13 14 15 19 20 21 29 34 35 41
Prefix (39)
    on left: 30 31 32, on right: 27
CallArgs (40)
    on left: 33 34 35, on right: 35 36
Call (41)
    on left: 36, on right: 38
Term (42)
    on left: 37 38 39, on right: 19 27 28 29 39
Factor (43)
    on left: 40 41 42, on right: 37 39


State 0

    0 $accept: . yyyAugNonterm $end

    $default  reduce using rule 1 ($@1)

    yyyAugNonterm  go to state 1
    $@1            go to state 2


State 1

    0 $accept: yyyAugNonterm . $end

    $end  shift, and go to state 3


State 2

    2 yyyAugNonterm: $@1 . Program

    id  shift, and go to state 4

    Program   go to state 5
    FuncList  go to state 6
    Funcdef   go to state 7


State 3

    0 $accept: yyyAugNonterm $end .

    $default  accept


State 4

    6 Funcdef: id . '(' ArgList ')' StmtList TEND ';'

    '('  shift, and go to state 8


State 5

    2 yyyAugNonterm: $@1 Program .

    $default  reduce using rule 2 (yyyAugNonterm)


State 6

    3 Program: FuncList .
    5 FuncList: FuncList . Funcdef

    id  shift, and go to state 4

    $default  reduce using rule 3 (Program)

    Funcdef  go to state 9


State 7

    4 FuncList: Funcdef .

    $default  reduce using rule 4 (FuncList)


State 8

    6 Funcdef: id '(' . ArgList ')' StmtList TEND ';'

    id  shift, and go to state 10

    $default  reduce using rule 7 (ArgList)

    ArgList  go to state 11


State 9

    5 FuncList: FuncList Funcdef .

    $default  reduce using rule 5 (FuncList)


State 10

    8 ArgList: id .

    $default  reduce using rule 8 (ArgList)


State 11

    6 Funcdef: id '(' ArgList . ')' StmtList TEND ';'
    9 ArgList: ArgList . ',' id

    ')'  shift, and go to state 12
    ','  shift, and go to state 13


State 12

    6 Funcdef: id '(' ArgList ')' . StmtList TEND ';'

    TIF      shift, and go to state 14
    TRETURN  shift, and go to state 15
    TBREAK   shift, and go to state 16
    TCONT    shift, and go to state 17
    TVAR     shift, and go to state 18
    TNOT     shift, and go to state 19
    id       shift, and go to state 20
    number   shift, and go to state 21
    '('      shift, and go to state 22
    '*'      shift, and go to state 23
    '-'      shift, and go to state 24

    StmtList    go to state 25
    Stmt        go to state 26
    Expression  go to state 27
    Prefix      go to state 28
    Call        go to state 29
    Term        go to state 30
    Factor      go to state 31


State 13

    9 ArgList: ArgList ',' . id

    id  shift, and go to state 32


State 14

   14 Stmt: TIF . Expression TTHEN StmtList TEND
   15     | TIF . Expression TTHEN StmtList TELSE StmtList TEND

    TNOT    shift, and go to state 19
    id      shift, and go to state 33
    number  shift, and go to state 21
    '('     shift, and go to state 22
    '*'     shift, and go to state 34
    '-'     shift, and go to state 24

    Expression  go to state 35
    Prefix      go to state 28
    Call        go to state 29
    Term        go to state 30
    Factor      go to state 31


State 15

   21 Stmt: TRETURN . Expression

    TNOT    shift, and go to state 19
    id      shift, and go to state 33
    number  shift, and go to state 21
    '('     shift, and go to state 22
    '*'     shift, and go to state 34
    '-'     shift, and go to state 24

    Expression  go to state 36
    Prefix      go to state 28
    Call        go to state 29
    Term        go to state 30
    Factor      go to state 31


State 16

   17 Stmt: TBREAK . id

    id  shift, and go to state 37


State 17

   18 Stmt: TCONT . id

    id  shift, and go to state 38


State 18

   12 Stmt: TVAR . id assignment Expression

    id  shift, and go to state 39


State 19

   30 Prefix: TNOT .

    $default  reduce using rule 30 (Prefix)


State 20

   13 Stmt: id . assignment Expression
   16     | id . ':' TLOOP StmtList TEND
   36 Call: id . '(' CallArgs ')'
   42 Factor: id .

    assignment  shift, and go to state 40
    '('         shift, and go to state 41
    ':'         shift, and go to state 42

    $default  reduce using rule 42 (Factor)


State 21

   40 Factor: number .

    $default  reduce using rule 40 (Factor)


State 22

   41 Factor: '(' . Expression ')'

    TNOT    shift, and go to state 19
    id      shift, and go to state 33
    number  shift, and go to state 21
    '('     shift, and go to state 22
    '*'     shift, and go to state 34
    '-'     shift, and go to state 24

    Expression  go to state 43
    Prefix      go to state 28
    Call        go to state 29
    Term        go to state 30
    Factor      go to state 31


State 23

   19 Stmt: '*' . Term assignment Expression
   31 Prefix: '*' .

    id      shift, and go to state 33
    number  shift, and go to state 21
    '('     shift, and go to state 22

    id      [reduce using rule 31 (Prefix)]
    number  [reduce using rule 31 (Prefix)]
    '('     [reduce using rule 31 (Prefix)]

    Call    go to state 29
    Term    go to state 44
    Factor  go to state 31


State 24

   32 Prefix: '-' .

    $default  reduce using rule 32 (Prefix)


State 25

    6 Funcdef: id '(' ArgList ')' StmtList . TEND ';'
   11 StmtList: StmtList . Stmt ';'

    TIF      shift, and go to state 14
    TEND     shift, and go to state 45
    TRETURN  shift, and go to state 15
    TBREAK   shift, and go to state 16
    TCONT    shift, and go to state 17
    TVAR     shift, and go to state 18
    TNOT     shift, and go to state 19
    id       shift, and go to state 20
    number   shift, and go to state 21
    '('      shift, and go to state 22
    '*'      shift, and go to state 23
    '-'      shift, and go to state 24

    Stmt        go to state 46
    Expression  go to state 27
    Prefix      go to state 28
    Call        go to state 29
    Term        go to state 30
    Factor      go to state 31


State 26

   10 StmtList: Stmt . ';'

    ';'  shift, and go to state 47


State 27

   20 Stmt: Expression .
   29 Expression: Expression . BinaryOperator Term

    TAND      shift, and go to state 48
    lessThan  shift, and go to state 49
    '+'       shift, and go to state 50
    '-'       shift, and go to state 51
    '#'       shift, and go to state 52

    $default  reduce using rule 20 (Stmt)

    BinaryOperator  go to state 53


State 28

   27 Expression: Prefix . Term

    id      shift, and go to state 33
    number  shift, and go to state 21
    '('     shift, and go to state 22

    Call    go to state 29
    Term    go to state 54
    Factor  go to state 31


State 29

   38 Term: Call .

    $default  reduce using rule 38 (Term)


State 30

   28 Expression: Term .
   39 Term: Term . '*' Factor

    '*'  shift, and go to state 55

    $default  reduce using rule 28 (Expression)


State 31

   37 Term: Factor .

    $default  reduce using rule 37 (Term)


State 32

    9 ArgList: ArgList ',' id .

    $default  reduce using rule 9 (ArgList)


State 33

   36 Call: id . '(' CallArgs ')'
   42 Factor: id .

    '('  shift, and go to state 41

    $default  reduce using rule 42 (Factor)


State 34

   31 Prefix: '*' .

    $default  reduce using rule 31 (Prefix)


State 35

   14 Stmt: TIF Expression . TTHEN StmtList TEND
   15     | TIF Expression . TTHEN StmtList TELSE StmtList TEND
   29 Expression: Expression . BinaryOperator Term

    TTHEN     shift, and go to state 56
    TAND      shift, and go to state 48
    lessThan  shift, and go to state 49
    '+'       shift, and go to state 50
    '-'       shift, and go to state 51
    '#'       shift, and go to state 52

    BinaryOperator  go to state 53


State 36

   21 Stmt: TRETURN Expression .
   29 Expression: Expression . BinaryOperator Term

    TAND      shift, and go to state 48
    lessThan  shift, and go to state 49
    '+'       shift, and go to state 50
    '-'       shift, and go to state 51
    '#'       shift, and go to state 52

    $default  reduce using rule 21 (Stmt)

    BinaryOperator  go to state 53


State 37

   17 Stmt: TBREAK id .

    $default  reduce using rule 17 (Stmt)


State 38

   18 Stmt: TCONT id .

    $default  reduce using rule 18 (Stmt)


State 39

   12 Stmt: TVAR id . assignment Expression

    assignment  shift, and go to state 57


State 40

   13 Stmt: id assignment . Expression

    TNOT    shift, and go to state 19
    id      shift, and go to state 33
    number  shift, and go to state 21
    '('     shift, and go to state 22
    '*'     shift, and go to state 34
    '-'     shift, and go to state 24

    Expression  go to state 58
    Prefix      go to state 28
    Call        go to state 29
    Term        go to state 30
    Factor      go to state 31


State 41

   36 Call: id '(' . CallArgs ')'

    TNOT    shift, and go to state 19
    id      shift, and go to state 33
    number  shift, and go to state 21
    '('     shift, and go to state 22
    '*'     shift, and go to state 34
    '-'     shift, and go to state 24

    $default  reduce using rule 33 (CallArgs)

    Expression  go to state 59
    Prefix      go to state 28
    CallArgs    go to state 60
    Call        go to state 29
    Term        go to state 30
    Factor      go to state 31


State 42

   16 Stmt: id ':' . TLOOP StmtList TEND

    TLOOP  shift, and go to state 61


State 43

   29 Expression: Expression . BinaryOperator Term
   41 Factor: '(' Expression . ')'

    TAND      shift, and go to state 48
    lessThan  shift, and go to state 49
    ')'       shift, and go to state 62
    '+'       shift, and go to state 50
    '-'       shift, and go to state 51
    '#'       shift, and go to state 52

    BinaryOperator  go to state 53


State 44

   19 Stmt: '*' Term . assignment Expression
   39 Term: Term . '*' Factor

    assignment  shift, and go to state 63
    '*'         shift, and go to state 55


State 45

    6 Funcdef: id '(' ArgList ')' StmtList TEND . ';'

    ';'  shift, and go to state 64


State 46

   11 StmtList: StmtList Stmt . ';'

    ';'  shift, and go to state 65


State 47

   10 StmtList: Stmt ';' .

    $default  reduce using rule 10 (StmtList)


State 48

   26 BinaryOperator: TAND .

    $default  reduce using rule 26 (BinaryOperator)


State 49

   24 BinaryOperator: lessThan .

    $default  reduce using rule 24 (BinaryOperator)


State 50

   22 BinaryOperator: '+' .

    $default  reduce using rule 22 (BinaryOperator)


State 51

   23 BinaryOperator: '-' .

    $default  reduce using rule 23 (BinaryOperator)


State 52

   25 BinaryOperator: '#' .

    $default  reduce using rule 25 (BinaryOperator)


State 53

   29 Expression: Expression BinaryOperator . Term

    id      shift, and go to state 33
    number  shift, and go to state 21
    '('     shift, and go to state 22

    Call    go to state 29
    Term    go to state 66
    Factor  go to state 31


State 54

   27 Expression: Prefix Term .
   39 Term: Term . '*' Factor

    '*'  shift, and go to state 55

    $default  reduce using rule 27 (Expression)


State 55

   39 Term: Term '*' . Factor

    id      shift, and go to state 67
    number  shift, and go to state 21
    '('     shift, and go to state 22

    Factor  go to state 68


State 56

   14 Stmt: TIF Expression TTHEN . StmtList TEND
   15     | TIF Expression TTHEN . StmtList TELSE StmtList TEND

    TIF      shift, and go to state 14
    TRETURN  shift, and go to state 15
    TBREAK   shift, and go to state 16
    TCONT    shift, and go to state 17
    TVAR     shift, and go to state 18
    TNOT     shift, and go to state 19
    id       shift, and go to state 20
    number   shift, and go to state 21
    '('      shift, and go to state 22
    '*'      shift, and go to state 23
    '-'      shift, and go to state 24

    StmtList    go to state 69
    Stmt        go to state 26
    Expression  go to state 27
    Prefix      go to state 28
    Call        go to state 29
    Term        go to state 30
    Factor      go to state 31


State 57

   12 Stmt: TVAR id assignment . Expression

    TNOT    shift, and go to state 19
    id      shift, and go to state 33
    number  shift, and go to state 21
    '('     shift, and go to state 22
    '*'     shift, and go to state 34
    '-'     shift, and go to state 24

    Expression  go to state 70
    Prefix      go to state 28
    Call        go to state 29
    Term        go to state 30
    Factor      go to state 31


State 58

   13 Stmt: id assignment Expression .
   29 Expression: Expression . BinaryOperator Term

    TAND      shift, and go to state 48
    lessThan  shift, and go to state 49
    '+'       shift, and go to state 50
    '-'       shift, and go to state 51
    '#'       shift, and go to state 52

    $default  reduce using rule 13 (Stmt)

    BinaryOperator  go to state 53


State 59

   29 Expression: Expression . BinaryOperator Term
   34 CallArgs: Expression .

    TAND      shift, and go to state 48
    lessThan  shift, and go to state 49
    '+'       shift, and go to state 50
    '-'       shift, and go to state 51
    '#'       shift, and go to state 52

    $default  reduce using rule 34 (CallArgs)

    BinaryOperator  go to state 53


State 60

   35 CallArgs: CallArgs . ',' Expression
   36 Call: id '(' CallArgs . ')'

    ')'  shift, and go to state 71
    ','  shift, and go to state 72


State 61

   16 Stmt: id ':' TLOOP . StmtList TEND

    TIF      shift, and go to state 14
    TRETURN  shift, and go to state 15
    TBREAK   shift, and go to state 16
    TCONT    shift, and go to state 17
    TVAR     shift, and go to state 18
    TNOT     shift, and go to state 19
    id       shift, and go to state 20
    number   shift, and go to state 21
    '('      shift, and go to state 22
    '*'      shift, and go to state 23
    '-'      shift, and go to state 24

    StmtList    go to state 73
    Stmt        go to state 26
    Expression  go to state 27
    Prefix      go to state 28
    Call        go to state 29
    Term        go to state 30
    Factor      go to state 31


State 62

   41 Factor: '(' Expression ')' .

    $default  reduce using rule 41 (Factor)


State 63

   19 Stmt: '*' Term assignment . Expression

    TNOT    shift, and go to state 19
    id      shift, and go to state 33
    number  shift, and go to state 21
    '('     shift, and go to state 22
    '*'     shift, and go to state 34
    '-'     shift, and go to state 24

    Expression  go to state 74
    Prefix      go to state 28
    Call        go to state 29
    Term        go to state 30
    Factor      go to state 31


State 64

    6 Funcdef: id '(' ArgList ')' StmtList TEND ';' .

    $default  reduce using rule 6 (Funcdef)


State 65

   11 StmtList: StmtList Stmt ';' .

    $default  reduce using rule 11 (StmtList)


State 66

   29 Expression: Expression BinaryOperator Term .
   39 Term: Term . '*' Factor

    '*'  shift, and go to state 55

    $default  reduce using rule 29 (Expression)


State 67

   42 Factor: id .

    $default  reduce using rule 42 (Factor)


State 68

   39 Term: Term '*' Factor .

    $default  reduce using rule 39 (Term)


State 69

   11 StmtList: StmtList . Stmt ';'
   14 Stmt: TIF Expression TTHEN StmtList . TEND
   15     | TIF Expression TTHEN StmtList . TELSE StmtList TEND

    TIF      shift, and go to state 14
    TELSE    shift, and go to state 75
    TEND     shift, and go to state 76
    TRETURN  shift, and go to state 15
    TBREAK   shift, and go to state 16
    TCONT    shift, and go to state 17
    TVAR     shift, and go to state 18
    TNOT     shift, and go to state 19
    id       shift, and go to state 20
    number   shift, and go to state 21
    '('      shift, and go to state 22
    '*'      shift, and go to state 23
    '-'      shift, and go to state 24

    Stmt        go to state 46
    Expression  go to state 27
    Prefix      go to state 28
    Call        go to state 29
    Term        go to state 30
    Factor      go to state 31


State 70

   12 Stmt: TVAR id assignment Expression .
   29 Expression: Expression . BinaryOperator Term

    TAND      shift, and go to state 48
    lessThan  shift, and go to state 49
    '+'       shift, and go to state 50
    '-'       shift, and go to state 51
    '#'       shift, and go to state 52

    $default  reduce using rule 12 (Stmt)

    BinaryOperator  go to state 53


State 71

   36 Call: id '(' CallArgs ')' .

    $default  reduce using rule 36 (Call)


State 72

   35 CallArgs: CallArgs ',' . Expression

    TNOT    shift, and go to state 19
    id      shift, and go to state 33
    number  shift, and go to state 21
    '('     shift, and go to state 22
    '*'     shift, and go to state 34
    '-'     shift, and go to state 24

    Expression  go to state 77
    Prefix      go to state 28
    Call        go to state 29
    Term        go to state 30
    Factor      go to state 31


State 73

   11 StmtList: StmtList . Stmt ';'
   16 Stmt: id ':' TLOOP StmtList . TEND

    TIF      shift, and go to state 14
    TEND     shift, and go to state 78
    TRETURN  shift, and go to state 15
    TBREAK   shift, and go to state 16
    TCONT    shift, and go to state 17
    TVAR     shift, and go to state 18
    TNOT     shift, and go to state 19
    id       shift, and go to state 20
    number   shift, and go to state 21
    '('      shift, and go to state 22
    '*'      shift, and go to state 23
    '-'      shift, and go to state 24

    Stmt        go to state 46
    Expression  go to state 27
    Prefix      go to state 28
    Call        go to state 29
    Term        go to state 30
    Factor      go to state 31


State 74

   19 Stmt: '*' Term assignment Expression .
   29 Expression: Expression . BinaryOperator Term

    TAND      shift, and go to state 48
    lessThan  shift, and go to state 49
    '+'       shift, and go to state 50
    '-'       shift, and go to state 51
    '#'       shift, and go to state 52

    $default  reduce using rule 19 (Stmt)

    BinaryOperator  go to state 53


State 75

   15 Stmt: TIF Expression TTHEN StmtList TELSE . StmtList TEND

    TIF      shift, and go to state 14
    TRETURN  shift, and go to state 15
    TBREAK   shift, and go to state 16
    TCONT    shift, and go to state 17
    TVAR     shift, and go to state 18
    TNOT     shift, and go to state 19
    id       shift, and go to state 20
    number   shift, and go to state 21
    '('      shift, and go to state 22
    '*'      shift, and go to state 23
    '-'      shift, and go to state 24

    StmtList    go to state 79
    Stmt        go to state 26
    Expression  go to state 27
    Prefix      go to state 28
    Call        go to state 29
    Term        go to state 30
    Factor      go to state 31


State 76

   14 Stmt: TIF Expression TTHEN StmtList TEND .

    $default  reduce using rule 14 (Stmt)


State 77

   29 Expression: Expression . BinaryOperator Term
   35 CallArgs: CallArgs ',' Expression .

    TAND      shift, and go to state 48
    lessThan  shift, and go to state 49
    '+'       shift, and go to state 50
    '-'       shift, and go to state 51
    '#'       shift, and go to state 52

    $default  reduce using rule 35 (CallArgs)

    BinaryOperator  go to state 53


State 78

   16 Stmt: id ':' TLOOP StmtList TEND .

    $default  reduce using rule 16 (Stmt)


State 79

   11 StmtList: StmtList . Stmt ';'
   15 Stmt: TIF Expression TTHEN StmtList TELSE StmtList . TEND

    TIF      shift, and go to state 14
    TEND     shift, and go to state 80
    TRETURN  shift, and go to state 15
    TBREAK   shift, and go to state 16
    TCONT    shift, and go to state 17
    TVAR     shift, and go to state 18
    TNOT     shift, and go to state 19
    id       shift, and go to state 20
    number   shift, and go to state 21
    '('      shift, and go to state 22
    '*'      shift, and go to state 23
    '-'      shift, and go to state 24

    Stmt        go to state 46
    Expression  go to state 27
    Prefix      go to state 28
    Call        go to state 29
    Term        go to state 30
    Factor      go to state 31


State 80

   15 Stmt: TIF Expression TTHEN StmtList TELSE StmtList TEND .

    $default  reduce using rule 15 (Stmt)
